// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parsing infix operators adding integers: 5 + 5 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "INTEGER",
          "value": 5,
        },
        "operator": "+",
        "right": Object {
          "kind": "INTEGER",
          "value": 5,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing infix operators boolean equal to boolean: false == true 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "BOOL",
          "value": false,
        },
        "operator": "==",
        "right": Object {
          "kind": "BOOL",
          "value": true,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing infix operators boolean not equal to boolean: true != false 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "BOOL",
          "value": true,
        },
        "operator": "!=",
        "right": Object {
          "kind": "BOOL",
          "value": false,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing infix operators dividing integers: 5 / 5 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "INTEGER",
          "value": 5,
        },
        "operator": "/",
        "right": Object {
          "kind": "INTEGER",
          "value": 5,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing infix operators integer equal to integer: 5 == 5 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "INTEGER",
          "value": 5,
        },
        "operator": "==",
        "right": Object {
          "kind": "INTEGER",
          "value": 5,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing infix operators integer greater than integer: 5 > 5 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "INTEGER",
          "value": 5,
        },
        "operator": ">",
        "right": Object {
          "kind": "INTEGER",
          "value": 5,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing infix operators integer less then integer: 5 < 5 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "INTEGER",
          "value": 5,
        },
        "operator": "<",
        "right": Object {
          "kind": "INTEGER",
          "value": 5,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing infix operators integer not equal to integer: 5 != 5 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "INTEGER",
          "value": 5,
        },
        "operator": "!=",
        "right": Object {
          "kind": "INTEGER",
          "value": 5,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing infix operators multiplying integers: 5 * 5 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "INTEGER",
          "value": 5,
        },
        "operator": "*",
        "right": Object {
          "kind": "INTEGER",
          "value": 5,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing infix operators subtracting integers: 5 - 5 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "INTEGER",
          "value": 5,
        },
        "operator": "-",
        "right": Object {
          "kind": "INTEGER",
          "value": 5,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing operator precedence addition and addition: a + b + c 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "INFIX_EXPRESSION",
          "left": Object {
            "kind": "IDENTIFIER",
            "value": "a",
          },
          "operator": "+",
          "right": Object {
            "kind": "IDENTIFIER",
            "value": "b",
          },
        },
        "operator": "+",
        "right": Object {
          "kind": "IDENTIFIER",
          "value": "c",
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing operator precedence addition and division: a + b / c 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "IDENTIFIER",
          "value": "a",
        },
        "operator": "+",
        "right": Object {
          "kind": "INFIX_EXPRESSION",
          "left": Object {
            "kind": "IDENTIFIER",
            "value": "b",
          },
          "operator": "/",
          "right": Object {
            "kind": "IDENTIFIER",
            "value": "c",
          },
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing operator precedence addition and subtraction: a + b - c 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "INFIX_EXPRESSION",
          "left": Object {
            "kind": "IDENTIFIER",
            "value": "a",
          },
          "operator": "+",
          "right": Object {
            "kind": "IDENTIFIER",
            "value": "b",
          },
        },
        "operator": "-",
        "right": Object {
          "kind": "IDENTIFIER",
          "value": "c",
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing operator precedence greater than and equality: 3 > 5 == false 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "INFIX_EXPRESSION",
          "left": Object {
            "kind": "INTEGER",
            "value": 3,
          },
          "operator": ">",
          "right": Object {
            "kind": "INTEGER",
            "value": 5,
          },
        },
        "operator": "==",
        "right": Object {
          "kind": "BOOL",
          "value": false,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing operator precedence less than and equality: 3 < 5 == true 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "INFIX_EXPRESSION",
          "left": Object {
            "kind": "INTEGER",
            "value": 3,
          },
          "operator": "<",
          "right": Object {
            "kind": "INTEGER",
            "value": 5,
          },
        },
        "operator": "==",
        "right": Object {
          "kind": "BOOL",
          "value": true,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing operator precedence multiple arithmetic operators: a + b * c + d / e - f 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "INFIX_EXPRESSION",
          "left": Object {
            "kind": "INFIX_EXPRESSION",
            "left": Object {
              "kind": "IDENTIFIER",
              "value": "a",
            },
            "operator": "+",
            "right": Object {
              "kind": "INFIX_EXPRESSION",
              "left": Object {
                "kind": "IDENTIFIER",
                "value": "b",
              },
              "operator": "*",
              "right": Object {
                "kind": "IDENTIFIER",
                "value": "c",
              },
            },
          },
          "operator": "+",
          "right": Object {
            "kind": "INFIX_EXPRESSION",
            "left": Object {
              "kind": "IDENTIFIER",
              "value": "d",
            },
            "operator": "/",
            "right": Object {
              "kind": "IDENTIFIER",
              "value": "e",
            },
          },
        },
        "operator": "-",
        "right": Object {
          "kind": "IDENTIFIER",
          "value": "f",
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing operator precedence multiple statements: 3 + 4; -5 * 5 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "INTEGER",
          "value": 3,
        },
        "operator": "+",
        "right": Object {
          "kind": "INTEGER",
          "value": 4,
        },
      },
      "kind": "EXPRESSION",
    },
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "PREFIX_EXPRESSION",
          "operator": "-",
          "right": Object {
            "kind": "INTEGER",
            "value": 5,
          },
        },
        "operator": "*",
        "right": Object {
          "kind": "INTEGER",
          "value": 5,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing operator precedence multiplication and division: a * b / c 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "INFIX_EXPRESSION",
          "left": Object {
            "kind": "IDENTIFIER",
            "value": "a",
          },
          "operator": "*",
          "right": Object {
            "kind": "IDENTIFIER",
            "value": "b",
          },
        },
        "operator": "/",
        "right": Object {
          "kind": "IDENTIFIER",
          "value": "c",
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing operator precedence multiplication and multiplication: a * b * c 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "INFIX_EXPRESSION",
          "left": Object {
            "kind": "IDENTIFIER",
            "value": "a",
          },
          "operator": "*",
          "right": Object {
            "kind": "IDENTIFIER",
            "value": "b",
          },
        },
        "operator": "*",
        "right": Object {
          "kind": "IDENTIFIER",
          "value": "c",
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing operator precedence prefix operator and multiplication: -a * b 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "INFIX_EXPRESSION",
        "left": Object {
          "kind": "PREFIX_EXPRESSION",
          "operator": "-",
          "right": Object {
            "kind": "IDENTIFIER",
            "value": "a",
          },
        },
        "operator": "*",
        "right": Object {
          "kind": "IDENTIFIER",
          "value": "b",
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing operator precedence two prefix operators: !-a 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "PREFIX_EXPRESSION",
        "operator": "!",
        "right": Object {
          "kind": "PREFIX_EXPRESSION",
          "operator": "-",
          "right": Object {
            "kind": "IDENTIFIER",
            "value": "a",
          },
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing prefix operators bang false: !false 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "PREFIX_EXPRESSION",
        "operator": "!",
        "right": Object {
          "kind": "BOOL",
          "value": false,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing prefix operators bang integer: !5 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "PREFIX_EXPRESSION",
        "operator": "!",
        "right": Object {
          "kind": "INTEGER",
          "value": 5,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing prefix operators bang true: !true 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "PREFIX_EXPRESSION",
        "operator": "!",
        "right": Object {
          "kind": "BOOL",
          "value": true,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;

exports[`parsing prefix operators negative integer: -5 1`] = `
Object {
  "kind": "PROGRAM",
  "statements": Array [
    Object {
      "expression": Object {
        "kind": "PREFIX_EXPRESSION",
        "operator": "-",
        "right": Object {
          "kind": "INTEGER",
          "value": 5,
        },
      },
      "kind": "EXPRESSION",
    },
  ],
}
`;
